Update recent spot to file on change Update config example Generate a random spot in the zone if not fort is available Change MAX_SPIN_DISTANCE to 20

--- a/configs/config.json.example
+++ b/configs/config.json.example
@@ -1,8 +1,8 @@
 {
-    "auth_service": "google",
+    "auth_service": "ptc",
     "username": "YOUR_USERNAME",
     "password": "YOUR_PASSWORD",
-    "location": "SOME_LOCATION",
+    "location": "37.805724, -122.416611",
     "gmapkey": "GOOGLE_MAPS_API_KEY",
     "encrypt_location": "",
     "websocket_server": false,
@@ -14,7 +14,7 @@
       {
         "type": "SleepSchedule",
         "config": {
-          "enabled": false,
+          "enabled": true,
           "time": "22:54",
           "duration":"7:46",
           "time_random_offset": "00:24",
@@ -41,9 +41,9 @@
       {
         "type": "UpdateLiveStats",
         "config": {
-          "enabled": false,
+          "enabled": true,
           "min_interval": 10,
-          "stats": ["username", "uptime", "stardust_earned", "xp_earned", "xp_per_hour", "stops_visited"],
+          "stats": ["username", "level_stats", "uptime", "stardust_earned", "xp_earned", "xp_per_hour", "stops_visited"],
           "terminal_log": true,
           "terminal_title": true
         }
@@ -66,10 +66,10 @@
         "type": "EvolvePokemon",
         "config": {
           "evolve_all": "none",
-          "first_evolve_by": "cp",
-          "evolve_above_cp": 500,
-          "evolve_above_iv": 0.8,
-          "logic": "or",
+          "first_evolve_by": "iv",
+          "evolve_above_cp": 10,
+          "evolve_above_iv": 0.93,
+          "logic": "and",
           "evolve_speed": 20,
           "use_lucky_egg": false
         }
@@ -83,12 +83,15 @@
           "max_berries_keep": 70,
           "max_revives_keep": 70,
           "item_filter": {
-            "Pokeball":       { "keep" : 100 },
-            "Potion":         { "keep" : 10 },
-            "Super Potion":   { "keep" : 20 },
-            "Hyper Potion":   { "keep" : 30 },
-            "Revive":         { "keep" : 30 },
-            "Razz Berry":     { "keep" : 100 }
+            "Pokeball":       { "keep" : 30 },
+            "Greatball":      { "keep" : 30 },
+            "Ultraball":      { "keep" : 100 },
+            "Potion":         { "keep" : 0 },
+            "Super Potion":   { "keep" : 0 },
+            "Hyper Potion":   { "keep" : 20 },
+            "Max Potion":     { "keep" : 30 },
+            "Revive":         { "keep" : 20 },
+            "Razz Berry":     { "keep" : 80 }
           },
           "recycle_wait_min": 1,
           "recycle_wait_max": 4
@@ -130,7 +133,9 @@
         "type": "MoveToFort",
         "config": {
           "lure_attraction": true,
-          "lure_max_distance": 2000
+          "lure_max_distance": 2000,
+          "bot_zone": true,
+          "zone_radius": 500
         }
       },
       {
@@ -144,7 +149,7 @@
     "map_object_cache_time": 5,
     "forts": {
       "avoid_circles": true,
-      "max_circle_size": 50,
+      "max_circle_size": 30,
       "cache_recent_forts": true
     },
     "walk_max": 4.16,
@@ -153,7 +158,7 @@
     "test": false,
     "health_record": true,
     "location_cache": true,
-    "distance_unit": "km",
+    "distance_unit": "m",
     "reconnecting_timeout": 15,
     "logging_color": true,
     "catch": {
@@ -162,7 +167,6 @@
       "// Rattata": { "always_catch" : true }
     },
     "release": {
-      "any": {"release_below_cp": 0, "release_below_iv": 0, "logic": "or"},
       "// Example of always releasing Rattata:": {},
       "// Rattata": {"always_release": true},
       "// Example of keeping 3 stronger (based on CP) Pidgey:": {},
@@ -170,9 +174,175 @@
       "// Example of keeping 2 stronger (based on IV) Zubat:": {},
       "// Zubat": {"keep_best_iv": 2},
       "// Also, it is working with any": {},
-      "// any": {"keep_best_iv": 3},
-      "// Example of keeping the 2 strongest (based on CP) and 3 best (based on IV) Zubat:": {},
-      "// Zubat": {"keep_best_cp": 2, "keep_best_iv": 3}
+      "// Legendary pokemons (Goes under S-Tier)": {},
+      "Lapras": { "always_release": false },
+      "Moltres": { "always_release": false },
+      "Zapdos": { "always_release": false },
+      "Articuno": { "always_release": false },
+      "// S-Tier pokemons (if pokemon can be evolved into tier, list the representative)": {},
+      "Mewtwo": { "always_release": false },
+      "Dragonite": { "always_release": false },
+      "Snorlax": { "always_release": false },
+      "// Mew evolves to Mewtwo": {},
+      "Mew": { "always_release": false },
+      "Arcanine": {"keep_best_cp": 1, "keep_best_iv": 3 },
+      "Vaporeon": {"keep_best_cp": 3,  "keep_best_iv": 6 },
+      "Gyarados": {"keep_best_cp": 3,  "keep_best_iv": 6 },
+      "Exeggutor": {"keep_best_cp": 1,  "keep_best_iv": 3 },
+      "Muk": {"keep_best_cp": 1, "keep_best_iv": 3 },
+      "Weezing": {"keep_best_cp": 1, "keep_best_iv": 3 },
+      "Flareon": {"keep_best_cp": 3,  "keep_best_iv": 6 },
+      "// Growlithe evolves to Arcanine": {},
+      "Growlithe": { "keep_best_iv": 3 },
+      "// Dragonair evolves to Dragonite": {},
+      "Dragonair": { "keep_best_iv": 3 },
+      "// Dratini evolves to Dragonair": {},
+      "Dratini": { "keep_best_iv": 3 },
+      "// Grimer evolves to Muk": {},
+      "Grimer": { "keep_best_iv": 3 },
+      "// Magikarp evolves to Gyarados": {},
+      "Magikarp": { "keep_best_iv": 6 },
+      "// Exeggcute evolves to Exeggutor": {},
+      "Exeggcute": { "keep_best_iv": 3 },
+      "// Eevee evolves to many versions, like Vaporeon, Flareon": {},
+      "Eevee": { "keep_best_iv": 6 },
+      "// A-Tier pokemons": {},
+      "Slowbro": { "keep_best_iv": 2 },
+      "Victreebel": { "keep_best_iv": 2 },
+      "Machamp": { "keep_best_iv": 2 },
+      "Poliwrath": { "keep_best_iv": 2 },
+      "Clefable": { "keep_best_iv": 2 },
+      "Nidoking": {"keep_best_cp": 1,  "keep_best_iv": 2 },
+      "Venusaur": { "keep_best_iv": 2 },
+      "Charizard": { "keep_best_iv": 2 },
+      "Golduck": { "keep_best_iv": 2 },
+      "Nidoqueen": { "keep_best_iv": 2 },
+      "Vileplume": { "keep_best_iv": 2 },
+      "Blastoise": { "keep_best_iv": 2 },
+      "Omastar":  { "keep_best_iv": 2 },
+      "Aerodactyl": { "keep_best_iv": 3 },
+      "Golem": { "keep_best_iv": 2 },
+      "Wigglytuff": { "keep_best_iv": 2 },
+      "Dewgong": { "keep_best_iv": 2 },
+      "Ninetales": { "keep_best_iv": 2 },
+      "Magmar": { "keep_best_iv": 2 },
+      "Kabutops": { "keep_best_iv": 2 },
+      "Electabuzz": { "keep_best_iv": 2 },
+      "Starmie": { "keep_best_iv": 2 },
+      "Jolteon": {"keep_best_cp": 3,  "keep_best_iv": 5 },
+      "Rapidash": { "keep_best_iv": 2 },
+      "Pinsir": { "keep_best_iv": 2 },
+      "Scyther": { "keep_best_iv": 2 },
+      "Tentacruel": { "keep_best_iv": 2 },
+      "Gengar": { "keep_best_iv": 2 },
+      "Hypno": { "keep_best_iv": 2 },
+      "Pidgeot": { "keep_best_iv": 2 },
+      "Rhydon": { "keep_best_iv": 2 },
+      "Seaking": { "keep_best_iv": 1 },
+      "Kangaskhan": { "keep_best_iv": 2 },
+      "// Koffing evolves to Weezing (A-Tier)": {},
+      "Koffing": { "keep_best_iv": 2 },
+      "// Below is B-tier and lower pokemons": {},
+	  "// B-1": {},
+      "Caterpie": { "keep_best_iv": 2 },
+      "Weedle": { "keep_best_iv": 2 },
+      "Diglett": { "keep_best_iv": 2 },
+      "Rattata": { "keep_best_iv": 2 },
+      "Abra": { "keep_best_iv": 2 },
+      "Zubat": { "keep_best_iv": 2 },
+      "Chansey": { "keep_best_iv": 2 },
+      "Pidgey": { "keep_best_iv": 2 },
+      "Spearow": { "keep_best_iv": 2 },
+      "Meowth": { "keep_best_iv": 2 },
+      "Krabby": { "keep_best_iv": 2 },
+      "Sandshrew": { "keep_best_iv": 2 },
+      "Poliwag": { "keep_best_iv": 2 },
+      "Horsea": { "keep_best_iv": 2 },
+      "Gastly": { "keep_best_iv": 2 },
+      "Ekans": { "keep_best_iv": 2 },
+      "Shellder": { "keep_best_iv": 2 },
+      "Vulpix": { "keep_best_iv": 2 },
+      "Voltorb": { "keep_best_iv": 2 },
+      "Geodude": { "keep_best_iv": 2 },
+      "Doduo": { "keep_best_iv": 2 },
+      "Onix": { "keep_best_iv": 2 },
+      "Mankey": { "keep_best_iv": 2 },
+      "Pikachu": { "keep_best_iv": 5 },
+      "Magnemite": { "keep_best_iv": 2 },
+      "Tentacool": { "keep_best_iv": 2 },
+      "Paras": { "keep_best_iv": 2 },
+      "Jigglypuff": { "keep_best_iv": 2 },
+      "Ditto": { "keep_best_iv": 2 },
+      "Staryu": { "keep_best_iv": 2 },
+      "Charmander": { "keep_best_iv": 5 },
+      "Goldeen": { "keep_best_iv": 2 },
+      "Squirtle": { "keep_best_iv": 2 },
+      "Cubone": { "keep_best_iv": 2 },
+      "Venonat": { "keep_best_iv": 2 },
+      "Bulbasaur": { "keep_best_iv": 2 },
+      "Drowzee": { "keep_best_iv": 2 },
+      "Machop": { "keep_best_iv": 2 },
+      "Psyduck": { "keep_best_iv": 2 },
+      "Seel": { "keep_best_iv": 2 },
+      "Kabuto": { "keep_best_iv": 2 },
+      "Bellsprout": { "keep_best_iv": 2 },
+      "Omanyte": { "keep_best_iv": 2 },
+      "Oddish": { "keep_best_iv": 2 },
+      "Rhyhorn": { "keep_best_iv": 2 },
+      "Clefairy": { "keep_best_iv": 2 },
+      "Slowpoke": { "keep_best_iv": 2 },
+      "Farfetch'd": { "keep_best_iv": 2 },
+      "Nidoran M": { "keep_best_iv": 2 },
+      "Nidoran F": { "keep_best_iv": 1 },
+      "Hitmonlee": { "keep_best_iv": 2 },
+      "Ponyta": { "keep_best_iv": 2 },
+      "Hitmonchan": { "keep_best_iv": 2 },
+      "Lickitung": { "keep_best_iv": 2 },
+      "Porygon": { "keep_best_iv": 2 },
+      "Jynx": { "keep_best_iv": 2 },
+      "Tangela": { "keep_best_iv": 2 },
+      "Tauros": { "keep_best_iv": 2 },
+	  "// B-2---------------------------": {},
+      "Metapod": { "keep_best_iv": 2 },
+      "Kakuna": { "keep_best_iv": 2 },
+      "Kadabra": { "keep_best_iv": 2 },
+      "Dugtrio": { "keep_best_iv": 2 },
+      "Pidgeotto": { "keep_best_iv": 2 },
+      "Poliwhirl": { "keep_best_iv": 2 },
+      "Nidorino": { "keep_best_iv": 2 },
+      "Haunter": { "keep_best_iv": 2 },
+      "Nidorina": { "keep_best_iv": 2 },
+      "Graveler": { "keep_best_iv": 1 },
+      "Raticate": { "keep_best_iv": 1 },
+      "Charmeleon": { "keep_best_iv": 2 },
+      "Wartortle": { "keep_best_iv": 2 },
+      "Persian": { "keep_best_iv": 1 },
+      "Ivysaur": { "keep_best_iv": 2 },
+      "Electrode": { "keep_best_iv": 1 },
+      "Marowak": { "keep_best_iv": 1 },
+      "Gloom": { "keep_best_iv": 2 },
+      "Seadra": { "keep_best_iv": 2 },
+      "Weepinbell": { "keep_best_iv": 1 },
+      "Fearow": { "keep_best_iv": 1 },
+      "Parasect": { "keep_best_iv": 1 },
+      "Machoke": { "keep_best_iv": 2 },
+      "Arbok": { "keep_best_iv": 2 },
+      "Sandslash": { "keep_best_iv": 1 },
+      "Kingler": { "keep_best_iv": 1 },
+      "Dodrio": { "keep_best_iv": 1 },
+      "Primeape": { "keep_best_iv": 1 },
+      "Magneton": { "keep_best_iv": 1 },
+      "Venomoth": { "keep_best_iv": 1 },
+      "Golbat": { "keep_best_iv": 1 },
+      "Raichu": { "keep_best_iv": 2 },
+      "Cloyster": { "keep_best_iv": 1 },
+      "Mr. Mime": { "keep_best_iv": 2 },
+	  "// B-3---------------------------": {},
+      "Beedrill": { "keep_best_iv": 1 },
+      "Butterfree": { "keep_best_iv": 1 },
+      "Alakazam": { "keep_best_iv": 2 },
+      "any": {"keep_best_iv": 2},
+      "// Example of keeping the 2 strongest (based on CP) and 3 best (based on IV) Zubat:": {}
     },
     "vips" : {
         "Any pokemon put here directly force to use Berry & Best Ball to capture, to secure the capture rate!": {},
