--- a/configs/config.json.optimizer.example
+++ b/configs/config.json.optimizer.example
@@ -1,8 +1,8 @@
 {
-    "auth_service": "google",
+    "auth_service": "ptc",
     "username": "YOUR_USERNAME",
     "password": "YOUR_PASSWORD",
-    "location": "SOME_LOCATION",
+    "location": "37.805724, -122.416611",
     "gmapkey": "GOOGLE_MAPS_API_KEY",
     "encrypt_location": "",
     "websocket_server": false,
@@ -14,7 +14,7 @@
       {
         "type": "SleepSchedule",
         "config": {
-          "enabled": false,
+          "enabled": true,
           "time": "22:54",
           "duration":"7:46",
           "time_random_offset": "00:24",
@@ -41,9 +41,9 @@
       {
         "type": "UpdateLiveStats",
         "config": {
-          "enabled": false,
+          "enabled": true,
           "min_interval": 10,
-          "stats": ["username", "uptime", "stardust_earned", "xp_earned", "xp_per_hour", "stops_visited"],
+          "stats": ["username", "level_stats", "uptime", "stardust_earned", "xp_earned", "xp_per_hour", "stops_visited"],
           "terminal_log": true,
           "terminal_title": true
         }
@@ -141,42 +141,45 @@
           "max_berries_keep": 70,
           "max_revives_keep": 70,
           "item_filter": {
-            "Pokeball":       { "keep" : 100 },
-            "Potion":         { "keep" : 10 },
-            "Super Potion":   { "keep" : 20 },
-            "Hyper Potion":   { "keep" : 30 },
-            "Revive":         { "keep" : 30 },
-            "Razz Berry":     { "keep" : 100 }
+            "Pokeball":       { "keep" : 30 },
+            "Greatball":      { "keep" : 30 },
+            "Ultraball":      { "keep" : 100 },
+            "Potion":         { "keep" : 0 },
+            "Super Potion":   { "keep" : 0 },
+            "Hyper Potion":   { "keep" : 20 },
+            "Max Potion":     { "keep" : 30 },
+            "Revive":         { "keep" : 20 },
+            "Razz Berry":     { "keep" : 80 }
           },
           "recycle_wait_min": 1,
           "recycle_wait_max": 4
         }
       },
-        {
-          "type": "CatchPokemon",
-          "config": {
-            "catch_visible_pokemon": true,
-            "catch_lured_pokemon": true,
-            "min_ultraball_to_keep": 5,
-            "catch_throw_parameters": {
-              "excellent_rate": 0.1,
-              "great_rate": 0.5,
-              "nice_rate": 0.3,
-              "normal_rate": 0.1,
-              "spin_success_rate" : 0.6
-            },
-                  "catch_simulation": {
-                    "flee_count": 3,
-                    "flee_duration": 2,
-                    "catch_wait_min": 2,
-                    "catch_wait_max": 6,
-                    "berry_wait_min": 2,
-                    "berry_wait_max": 3,
-                    "changeball_wait_min": 2,
-                    "changeball_wait_max": 3
-                  }
+      {
+        "type": "CatchPokemon",
+        "config": {
+          "catch_visible_pokemon": true,
+          "catch_lured_pokemon": true,
+          "min_ultraball_to_keep": 5,
+          "catch_throw_parameters": {
+            "excellent_rate": 0.1,
+            "great_rate": 0.5,
+            "nice_rate": 0.3,
+            "normal_rate": 0.1,
+            "spin_success_rate" : 0.6
+          },
+          "catch_simulation": {
+            "flee_count": 3,
+            "flee_duration": 2,
+            "catch_wait_min": 2,
+            "catch_wait_max": 6,
+            "berry_wait_min": 2,
+            "berry_wait_max": 3,
+            "changeball_wait_min": 2,
+            "changeball_wait_max": 3
           }
-        },
+        }
+      },
       {
         "type": "SpinFort",
         "config": {
@@ -187,8 +190,10 @@
       {
         "type": "MoveToFort",
         "config": {
-            "lure_attraction": true,
-            "lure_max_distance": 2000
+          "lure_attraction": true,
+          "lure_max_distance": 2000,
+          "bot_zone": true,
+          "zone_radius": 500
         }
       },
       {
@@ -202,7 +207,7 @@
     "map_object_cache_time": 5,
     "forts": {
       "avoid_circles": true,
-      "max_circle_size": 50,
+      "max_circle_size": 30,
       "cache_recent_forts": true
     },
     "walk_max": 4.16,
@@ -211,7 +216,7 @@
     "test": false,
     "health_record": true,
     "location_cache": true,
-    "distance_unit": "km",
+    "distance_unit": "m",
     "reconnecting_timeout": 15,
     "logging_color": true,
     "catch": {
