--- a/configs/config.json.example
+++ b/configs/config.json.example
@@ -34,7 +34,7 @@
       {
         "type": "CompleteTutorial",
         "config": {
-          "enabled": false,
+          "enabled": true,
           "// set a name": "",
           "nickname": ""
         }
@@ -52,7 +52,7 @@
         "type": "UpdateLiveStats",
         "config": {
           "enabled": true,
-          "min_interval": 10,
+          "min_interval": 30,
           "stats": ["username", "level_stats", "uptime", "stardust_earned", "xp_earned", "xp_per_hour", "stops_visited"],
           "terminal_log": true,
           "terminal_title": true
@@ -70,7 +70,7 @@
       {
         "type": "NicknamePokemon",
         "config": {
-          "enabled": false,
+          "enabled": true,
           "nickname_template": "{iv_pct}_{iv_ads}"
         }
       },
@@ -89,7 +89,7 @@
       {
         "type": "TransferPokemon",
         "config": {
-          "min_free_slot": 5,
+          "min_free_slot": 50,
           "transfer_wait_min": 1,
           "transfer_wait_max": 4
         }
@@ -157,9 +157,9 @@
         "config": {
           "lure_attraction": true,
           "lure_max_distance": 2000,
-          "walker": "StepWalker",
+          "walker": "PolylineWalker",
           "bot_zone": true,
-          "zone_radius": 1200
+          "zone_radius": 800
         }
       },
       {
@@ -185,13 +185,13 @@
       "// 'pokemon_info' parameter define which info to show for each pokemon": {},
       "// the available options are": {},
       "// ['cp', 'iv_ads', 'iv_pct', 'ivcp', 'ncp', 'level', 'hp', 'moveset', 'dps']": {},
-      "pokemon_info": ["cp", "iv_pct"]
+      "pokemon_info": ["cp", "ncp", "iv_pct"]
     },
     "walk_max": 4.16,
     "walk_min": 2.16,
-    "alt_min": 500,
-    "alt_max": 1000,
-    "gps_default_altitude": 8.0,
+    "alt_min": 0,
+    "alt_max": 285,
+    "gps_default_altitude": 1.0,
     "replicate_gps_xy_noise": false,
     "replicate_gps_z_noise": false,
     "gps_xy_noise_range": 0.000125,
@@ -203,7 +203,7 @@
     "distance_unit": "m",
     "reconnecting_timeout": 15,
     "logging_color": true,
-    "daily_catch_limit": 1000,
+    "daily_catch_limit": 2000,
     "catch": {
       "any": {"catch_above_cp": 0, "catch_above_iv": 0, "logic": "or"},
       "// Example of always catching Rattata:": {},
